--- a/Management/goals.tex
+++ b/Management/goals.tex
@@ -46,6 +46,16 @@ Allow adds-on
 \subsection{Task management}
 \subsection{Network}
 \section{Tools}
+\subsection{Choice}
+\paragraph{Version controle}
+Git has been chosen as the version controle system.
+It will be used throw the git shell terminal, and connected to a repository stored on a Github server.
+\paragraph{Task management}
+To manage the task, and the goals, an account on Freedcamp, has been created.
+This is a try.
+\subsection{Toolchain}
+\paragraph{About}
+It could be interesting to find a way to automatize the use of each tools.
 \part{Phases of the project}
 \chapter{Phase 1 - Of development}
 \chapter{Phase 2 - Of interface}
